--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+body {
+  background-color: black;
+  padding: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0 1px 3px rgb(42, 41, 41);
+  background: rgb(206, 47, 19);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+th,td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid rgb(254, 254, 254);
+}
+th {
+    background-color: rgb(110, 121, 41);
+    color: rgb(14, 227, 39);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+tr:nth-child(even) {
+    background-color: rgb(244, 228, 228);
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+tr:hover {
+  cursor: pointer;
 }
